--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -507,7 +507,7 @@ canvas {
   width: 100%;
   height: 4px;
   -webkit-appearance: none;
-  background: var(--bg-tertiary);
+  background: #383d45;
   border-radius: 2px;
   outline: none;
 }
